set up default events in raccoon.cfg

--- a/config/raccoon.cfg
+++ b/config/raccoon.cfg
@@ -1,9 +1,13 @@
 exports.raccoon_config = {
-	
+	'debug':true,
 	'layouts': {
 		'base': 'common/index'
 	},
-
+	'events': {
+		'beforeDispatch':function(e) { if(raccoon_config.debug)  response.write("beforeDispatch fired on route: "+e); },
+		'route404':function(e) { response.status(404); response.write("route404 fired on route: "+e); }
+	},
+	'database':false,
 	'routes': {
 		'main': '{class}/{method}/{args}',
 		'map': [
